<resources>
    <string name="app_name">Калькулятор</string>

    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="divider">,</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="menu_icon">Иконка меню</string>

    <string name="vibration">Вибрация</string>
    <string name="share">Поделиться</string>
    <string name="feedback">Обратная связь</string>
    <string name="information">Информация</string>

    <string name="theme_light">Светлая тема</string>
    <string name="theme_dark">Темная тема</string>
    <string name="theme_gold">Золотая тема</string>
    <string name="clear_history">Очистить</string>
    <string name="close_history">Закрыть</string>

</resources>
