<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/theme_group"
        android:title="Тема"
        android:checkableBehavior="single">
            <item
                android:id="@+id/theme_dark"
                android:title="Темная" />
            <item
                android:id="@+id/theme_light"
                android:title="Светлая" />
            <item
                android:id="@+id/theme_blue"
                android:title="Голубая" />
            <item
                android:id="@+id/theme_gold"
                android:title="Золотая" />
    </group>

    <item
        android:id="@+id/menu_vibration_switch"
        android:icon="@drawable/menu_vibration_icon"
        android:title="@string/vibration"
        app:actionLayout="@layout/menu_theme_switch" />

    <item
            android:id="@+id/menu_share_link"
            android:icon="@drawable/menu_share_icon"
            android:title="@string/share"/>

    <item
            android:id="@+id/menu_feedback_link"
            android:icon="@drawable/menu_feedback_icon"
            android:title="@string/feedback"/>

    <item
            android:id="@+id/menu_information_link"
            android:icon="@drawable/menu_information_icon"
            android:title="@string/information"/>

</menu>